--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,30 @@
 Package: coreCollection
 Type: Package
 Title: Core Collection
-Version: 0.1.0
+Version: 0.9.0
 Author: Matthijs Brouwer
 Maintainer: Matthijs Brouwer <matthijs.brouwer@wur.nl>
-Description: Core Collection
-    Create Core Collection.
-License: ...
+Description: 
+  Core Collection
+  Create Core Collection.
+License: GPL (>=2)
 Encoding: UTF-8
 LazyData: true
-LinkingTo: Rcpp
-Imports: Rcpp
+Depends:
+  R (>= 3.5)
+LinkingTo: 
+  Rcpp
+Imports: 
+  Rcpp (>= 1.0.0),
+  R6 (>= 2.4.0),
+  methods
+Collate:
+  coreCollection.package.R
+  coreCollection.R
+  coreSelection.R
+  RcppExports.R
+Suggests: 
+  testthat,
+  vcfR,
+  adegenet
+RoxygenNote: 6.1.1
