--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,16 @@ Package: coreCollection
 Type: Package
 Title: Core Collection
 Version: 0.9.2
-Author: Matthijs Brouwer
-Maintainer: Matthijs Brouwer <matthijs.brouwer@wur.nl>
+Authors@R: 
+  c(person(given = "Matthijs",
+           family = "Brouwer",
+           role = c("aut", "cre"),
+           email = "matthijs.brouwer@wur.nl",
+           comment = c(ORCID = "0000-0001-8183-0484")),
+    person(given = "Reinhoud",
+           family = "Blok, de",
+           email = "reinhoud.deblok@wur.nl",
+           role = "ctb"))
 Description: 
   Core Collection
   Create Core Collection.
