--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,10 @@ Authors@R:
            email = "reinhoud.deblok@wur.nl",
            role = "ctb"))
 Description: 
-  This package can be used to create a Core Collection based on a distance matrix and applying
-  the A-NE (accession nearest entry), E-NE (entry nearest entry) or E-E (entry entry) method.
+  Create a custom sized Core Collection based on a distance matrix and applying
+  the A-NE (accession nearest entry), E-NE (entry nearest entry) or E-E (entry entry) method
+  as introduced in Jansen and van Hintum (2007) <doi:10.1007/s00122-006-0433-9> and
+  further elaborated on in Odong, T.L. (2012) <https://edepot.wur.nl/212422>.
   Optionally a list of preselected accessions to be included into the core can be set.
   For each accession in the computed core, if available nearby accessions are retrievable
   that can be used as an alternative.
